fixed some window sizes on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -684,10 +684,10 @@ ul.treeView ul > li:last-child:after {
         padding: 4% 0;
     }
     .windowContainer {
-        width: auto;
+        max-width: 92dvw;  
     }
     .windowContent {
-        width: auto;
+        box-sizing: border-box;
     }
     #bioTrees {
         flex-direction: column;
